[package]
name = "bzy-rs"
version = "0.1.0"
edition = "2021"

[[example]]
name = "download_images"
path = "examples/download_images.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
anyhow = { version = "1" }
reqwest = "0.11.18"
tokio = { version = "1", features = ["full"] }